# proj_ros2plc

./: .gitmodules  README.md
control_turtlebot3_with_plc/: CMakeLists.txt  package.xml
control_turtlebot3_with_plc/scripts/: control_turtlebot3_with_plc.py
devel/: .catkin  local_setup.sh  setup.sh
pick_and_place/: CMakeLists.txt  test_aruco.py  testcam.py
pick_and_place/config/: cal_joint_pose.yaml  cal_simple_pose.yaml  calibration.yaml
pick_and_place/launch/: camera_pose.launch  ur5_arm_hardware.launch
src/action_command/: CMakeLists.txt  package.xml
src/action_command/action/: Go_place.action  arm_tf_msg.action  image_process.action
src/action_command/script/: arm_action_client.py  arm_action_server.py  arm_tf_test_client.py  arm_tf_test_server.py  image_process_client.py  image_process_server.py
src/pick_and_place/: example_pose.py  example_pose_2.py  joy_control_robotarm_dependent.py  joy_control_robotarm_independent.py  package.xml  robot_motion_plan.py  test_vision.py  testmotion.py  testmove.py  utils.py
src/pick_and_place/config/: calibration_jointstate.yaml  calibration_simple.yaml
src/pick_and_place/launch/: cal_cam_test.launch  real_servo.launch
src/pick_and_place/script/joystick/: moveitjoy_module.py
src/pick_and_place/script/test/: SetUpPose.out  test.out
